[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/space.png" type="Texture" id=3]
[ext_resource path="res://hud/Hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://waves/Waves.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
position = Vector2( -0.749146, 0 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4832.0
margin_bottom = 8248.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.126667 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 4800, 8096 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 850 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Waves" parent="." instance=ExtResource( 6 )]
[connection signal="hit" from="Player" to="." method="damage"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="spawn_mob" from="Waves" to="." method="_on_spawn_mob"]
